--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,37 @@
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.162.0/three.module.js"
+      integrity="sha512-0XQNqFQUDxCJPikfkl+TwMm0YblRLrIoBb7MvYZ4Q7BUoeNBXUvW/PawMUgT2jn3w/AFTxANjy0mJ94ob215mQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Harshit Pandey</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    
+    <div id="main"></div>
     <div id="root"></div>
+   
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+  
+    <script>
+      VANTA.NET({
+        el: "#main",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        minHeight: 700.00,
+        minWidth: 1700.00,
+        scale: 1.00,
+        scaleMobile: 1.00,
+         points: 20.00,
+        maxDistance: 20.00,
+        spacing: 10.00
+      })
+    </script>
   </body>
 </html>
