--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
+    <div class="body">
     <div id="main"></div>
     <div id="root"></div>
+    </div>
    
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
@@ -50,7 +51,7 @@
         touchControls: true,
         gyroControls: false,
         minHeight: 700.00,
-        minWidth: 1700.00,
+        minWidth: 2700.00,
         scale: 1.00,
         scaleMobile: 1.00,
          points: 20.00,
