--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="body overflow-hidden">
+    <div class="body">
     <div id="main"></div>
     <div id="root"></div>
     </div>
@@ -51,8 +51,7 @@
         touchControls: true,
         gyroControls: false,
         minHeight: 700.00,
-        minWidth: 1700.00,
-        maxWidth:2000.00,
+        minWidth: 100%.00,
         scale: 1.00,
         scaleMobile: 1.00,
          points: 20.00,
