--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -33,7 +33,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="body">
+    <div class="body overflow-hidden">
     <div id="main"></div>
     <div id="root"></div>
     </div>
